--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-#header {
-    background-color: blue;
-  }
-  .header {
-    background-color: green;
-  }
-  
+@charset "UTF-8";
+/* Utils */
+
 /*  ID : Logo et Titres : Shrikhand 
     Text : roboto */
+
 /* CSS global sur les éléments */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 *
 {
   font-family:'Roboto', 'sans-serif';
   box-sizing: border-box;
+  font-weight: 400;
 }
 
 body
@@ -30,55 +30,87 @@ body
 --Shadow-color: #B5B5B5;
 }
 
-/* btn : bouton classique et 'Commander' */
-.btn {
-}
-
-/* btn-fonction : bouton type pour fonction */
-.btn__fonction {
-
-}
-
-/* btn 'nouveau' vignette restaurant */
-.btn__nouveau {
-
-}
-/* Card restaurant */
-.restaurant__child {
-
-}
-
 /* Header */
 
+header {
+    background-color: var(--background-color-white);
+    margin: 0;
+    position: relative;
+}
+  
 .fa-arrow-left {
-  display:none;
+  display: none;
 }
 
 .logo {
   display: flex;
   justify-content: center;
   padding: 1.5rem 0;
-  box-shadow: 0.5rem 0 1rem Black;
+  box-shadow: 0rem 0rem 0.5rem var(--shadow-color);
 }
 
-.homepage {
-  width: 100%;
+.logo img {
+    width: 180px;
 }
 
 /* Menu de Navigation */
 
 nav {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  padding: 1.5rem;
+  align-items: center;
   background-color: #EAEAEA;
-    fa-location-bot {
-      padding: 1.5rem;
-    }
   }
+
+h2 {
+    font-family: "Roboto", "sans-serif";
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0.3rem;
+}
 
 .titre-roboto-2 {
   font-size: 1.0rem;
   font-weight: bold;
 }
+
+/* Espace de Réservation */
+
+.reserved {
+    text-align: center;
+    padding: 0 2rem;
+    background-color: var(--background-color);
+}
+  
+h1 {
+    font-family: "Roboto", "sans-serif";
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+  
+p {
+    font-family: "Roboto", "sans-serif";
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+.btn button {
+    font-family: "Roboto", "sans-serif";
+    font-size: 1rem;
+    font-weight: 400;
+    color: #FFF;
+    border-radius: 5rem;
+    border: none;
+    padding: 1rem 2rem;
+  
+    background: rgb(147,86,220);
+    background: linear-gradient(0deg, rgba(147,86,220) 0%, rgba(255,121,218) 100%);
+  
+    box-shadow: 0rem 0.2rem 0.5rem 0.1rem var(--shadow-color);
+}
+  
+.btn button:hover {
+    transform: scale(1.05);
+    transition: all 80ms ease-in;
+    opacity: 0.95;
+} 
