--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,126 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+.homepage__logo, .search, .function__btn::before {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
+.reserved__btn button:hover {
+  transform: scale(1.05);
+  transition: all 80ms ease-in;
+  opacity: 0.95; }
+
+* {
+  font-family: 'Roboto';
+  box-sizing: border-box;
+  font-weight: 400; }
+
+body {
+  background-color: #E8E8E8; }
+
+body, p, h2 {
+  margin: 0; }
+
+p {
+  font-family: 'Roboto', 'sans-serif';
+  font-size: 1rem;
+  font-weight: 300; }
+
+h1 {
+  font-family: 'Roboto', 'sans-serif';
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 1rem 0; }
+
+h2 {
+  font-family: 'Roboto', 'sans-serif';
+  font-size: 1rem;
+  font-weight: 400; }
+
+section {
+  padding: 1rem; }
+
+/* Header */
+.homepage {
+  background-color: #FFF;
+  margin: 0;
+  position: relative; }
+  .homepage__logo {
+    padding: 1rem;
+    box-shadow: 0rem 0rem 0.5rem #B5B5B5; }
+    .homepage__logo img {
+      width: 180px; }
+
+.fa-arrow-left {
+  display: none; }
+
+.search {
+  background-color: #DDD;
+  padding: 1rem; }
+  .search i {
+    padding-right: 0.5rem;
+    font-size: 1rem; }
+
+/* Réservation */
+.reserved > h1 {
+  margin: 1rem 3rem; }
+
+.reserved {
+  text-align: center; }
+  .reserved__btn button {
+    font-family: 'Roboto', 'sans-serif';
+    font-size: 1rem;
+    font-weight: 300;
+    color: #FFF;
+    border-radius: 5rem;
+    border: none;
+    padding: 1rem 2rem;
+    margin: 2rem 0;
+    background: #9356DC;
+    background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+    box-shadow: 0rem 0.2rem 0.5rem 0.1rem #B5B5B5; }
+
+.function {
+  background-color: #FFF; }
+  .function__buttons {
+    counter-reset: steps;
+    display: flex;
+    gap: 2rem; }
+    @media (max-width: 992px) {
+      .function__buttons {
+        flex-direction: column;
+        padding: 1rem; } }
+
+.function__btn {
+  display: flex;
+  align-items: center;
+  background-color: #E8E8E8;
+  border-radius: 1.5rem;
+  flex-grow: 1;
+  padding: 1.5rem 0;
+  width: 100%;
+  box-shadow: 0rem 0.2rem 0.5rem 0.1rem #B5B5B5; }
+  .function__btn:hover {
+    transition: all 80ms ease-in;
+    background-color: #d7c0f2; }
+    .function__btn:hover > i {
+      transition: all 80ms ease-in;
+      color: #6c27be; }
+
+.function__btn::before {
+  counter-increment: steps;
+  content: counter(steps);
+  position: relative;
+  left: -0.8rem;
+  color: #FFF;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #9356DC;
+  border-radius: 50%; }
+.function__btn i {
+  color: grey;
+  padding: 0 1rem;
+  font-size: 1.3rem; }
 
 /*# sourceMappingURL=main.css.map */
