--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 
 @import "./base/base";
 
+@import "./pages/menupages";
+
 @import "./layout/header";
 @import "./layout/reserved";
 @import "./layout/fonctionnement";
