--- a/sass/main.css
+++ b/sass/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-.homepage__logo, .function__btn::before, .search {
+.header__arrow, .header__logo, .function__btn::before, .search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@ body {
   background-color: #F6F6F6;
 }
 
-body, p, h2, figure {
+body, p, h2, h3, figure {
   margin: 0;
 }
 
@@ -64,25 +64,67 @@ a, a:visited {
   color: inherit;
 }
 
+.header--withbackarrow {
+  position: relative;
+}
+
+.header__arrow {
+  position: absolute;
+  left: 2rem;
+  color: black;
+  font-size: 1.2rem;
+}
+
+.BG__img {
+  max-width: 100%;
+  max-height: 20rem;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.menu {
+  position: relative;
+  z-index: 1;
+  margin-top: -5rem;
+  background-color: #F6F6F6;
+  border-radius: 2rem 2rem 0 0;
+}
+
+.menu__header {
+  padding: 1rem 2rem 2rem 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu__title {
+  font-family: 'Shrikhand','sans-serif';
+  font-size: 1.5rem;
+}
+
 /* Header */
-.homepage {
+.header {
   background-color: #FFF;
   margin: 0;
   position: relative;
 }
 
-.homepage__logo {
+.header__logo {
+  margin: 0;
   padding: 1rem;
   -webkit-box-shadow: 0rem 0rem 0.5rem #919191;
           box-shadow: 0rem 0rem 0.5rem #919191;
 }
 
-.homepage__logo img {
+.header__logo img {
   width: 180px;
-}
-
-.fa-arrow-left {
-  display: none;
 }
 
 /* Réservation */
@@ -301,7 +343,7 @@ footer {
   color: #FFF;
 }
 
-footer .title {
+footer__title {
   font-family: 'Shrikhand','Roboto', 'sans-serif';
   font-size: 1rem;
 }
