--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,10 @@
 @import "./utils/mixins";
 
 @import "./components/buttons";
+@import "./components/loader";
 
 @import "./base/base";
+@import "./base/animation";
 
 @import "./pages/menupages";
 
