--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -4,19 +4,33 @@
     margin: 1.5rem 0 4rem 0;
     &__allcards {
       display:flex;
-      flex-direction: column;
-      align-items:center;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 1rem;
+      @media (min-width:992px) {
+        align-items:center;
+        }
+      }
     }
-  }
+  
   
   .restaurant__card {
     display: flex;
     flex-direction: column;
     width: 100%;
     position: relative;
-    max-width: 800px;
     background-color: $color-white;
+    @media (min-width:992px) {
+      display: flex;
+      flex-wrap: wrap;
+      width: 48%;
+    }
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    background-color: $color-white;
+
     border-radius: 1rem;
     overflow: hidden;
     @include base-shadow;
@@ -45,10 +59,12 @@
     }
   }
   .heart {
+    position: relative;
     & i {
     font-size: 1.5rem;
     }
     & .fas {
+      position:absolute;
       opacity: 0;
       @include gradient (180deg);
       cursor:pointer;
@@ -62,7 +78,8 @@
       opacity: 1;
     }
     &:hover .far {
-      display:none;
+      transition: all 150ms ease-in;
+      opacity: 0;
     }
   }
   
