--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,6 +31,13 @@ h1 {
 
 h2 {
   font-family: 'Roboto', 'sans-serif';
+  font-size: $h1-size;
+  font-weight: 700;
+  margin: 1rem 0;
+} 
+
+h3 {
+  font-family: 'Roboto', 'sans-serif';
   font-size: $base-size-type;
   font-weight: 400;
 } 
