--- a/sass/layout/_fonctionnement.scss
+++ b/sass/layout/_fonctionnement.scss
@@ -5,7 +5,7 @@
   
       display: flex;
       gap: 2rem;
-      @media (max-width:992px) {
+      @media (max-width:766px) {
         flex-direction: column;
         padding: 1rem;
       }
@@ -20,6 +20,9 @@
     flex-grow: 1;
     padding: 1.5rem 0;
     width: 100%;
+    @media (min-width:768px) and (max-width:1022px) {
+      padding: 1.5rem 0 1.5rem 0;
+    }
     @include base-shadow;
       &:hover {
         transition: all 80ms ease-in;
@@ -44,6 +47,11 @@
   
       background-color: $primary-color; 
       border-radius:50%;
+
+      @media (min-width:768px) and (max-width:1022px) {
+        margin-right: -0.4rem;
+        width: 1.8rem;
+      }
   
       @extend %flex-center;
     }
