--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-    @extend %flex-center;
+    @include flex-center;
   
     background-color: rgba(255, 255, 255, 0.9);
   
