--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -11,3 +11,18 @@
     background: $primary-color;
     background:linear-gradient(($degree), $primary-color 25%, $secondary-color 100%);
 }
+
+// Flex Center //
+@mixin flex-center {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+// hover_btn //
+@mixin hover-btn {
+    transform: scale(1.05);
+    transition: all 80ms ease-in;
+    filter: brightness(1.05);
+    box-shadow: #D5D5D5 0.5rem 0.5rem 0.5rem 0.1rem;
+}
