--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@
 
 *
 {
-  font-family: 'Roboto','sans-serif';
+  font-family: $font-family;
   box-sizing: border-box;
   font-weight: 400;
 }
@@ -17,27 +17,27 @@ body, p, h2, h3, figure {
 }
 
 p {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: $font-family;
   font-size: $base-size-type;
   font-weight: 300;
 }
 
 h1 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: $font-family;
   font-size: $h1-size;
   font-weight: 700;
   margin: 1rem 0;
 }
 
 h2 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: $font-family;
   font-size: $h1-size;
   font-weight: 700;
   margin: 1rem 26px;
 } 
 
 h3 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: $font-family;
   font-size: $base-size-type;
   font-weight: 400;
   @media (min-width:1024px) {
