--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,7 +1,7 @@
 // Button type //
 
 @mixin btn {
-    font-family:'Roboto', 'sans-serif';
+    font-family: $font-family;
     font-size: $base-size-type;
     font-weight:300;
     color: $color-white;
@@ -18,7 +18,7 @@
     content: 'Nouveau';
     position: absolute;
     padding: 0.5rem;
-    font-family: 'Roboto', 'sans-serif';
+    font-family: $font-family;
     font-size: 0.8rem;
     color: darken($tertiary-color, $amount: 50);
     background-color: $tertiary-color;
