--- a/sass/main.css
+++ b/sass/main.css
@@ -62,7 +62,7 @@
 }
 
 * {
-  font-family: 'Roboto','sans-serif';
+  font-family: "Roboto", "sans-serif";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-weight: 400;
@@ -77,27 +77,27 @@ body, p, h2, h3, figure {
 }
 
 p {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 1rem;
   font-weight: 300;
 }
 
 h1 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 1.5rem;
   font-weight: 700;
   margin: 1rem 0;
 }
 
 h2 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 1.5rem;
   font-weight: 700;
   margin: 1rem 26px;
 }
 
 h3 {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 1rem;
   font-weight: 400;
 }
@@ -123,8 +123,8 @@ a, a:visited {
 
 @-webkit-keyframes itemappear {
   0% {
-    -webkit-transform: translateY(3rem);
-            transform: translateY(3rem);
+    -webkit-transform: translateY(6rem);
+            transform: translateY(6rem);
   }
   100% {
     -webkit-transform: translateY(0);
@@ -134,8 +134,8 @@ a, a:visited {
 
 @keyframes itemappear {
   0% {
-    -webkit-transform: translateY(3rem);
-            transform: translateY(3rem);
+    -webkit-transform: translateY(6rem);
+            transform: translateY(6rem);
   }
   100% {
     -webkit-transform: translateY(0);
@@ -477,7 +477,7 @@ a, a:visited {
 }
 
 .reserved__btn button {
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 1rem;
   font-weight: 300;
   color: #FFF;
@@ -684,7 +684,7 @@ a, a:visited {
   content: 'Nouveau';
   position: absolute;
   padding: 0.5rem;
-  font-family: 'Roboto', 'sans-serif';
+  font-family: "Roboto", "sans-serif";
   font-size: 0.8rem;
   color: #1b6150;
   background-color: #99E2D0;
