--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,6 +10,7 @@
  $base-size-type:1rem; 
  $h1-size:1.5rem;
  $h1-card-size:1.1rem;
+ $font-family: 'Roboto', 'sans-serif';
  
  // Padding & margin //
  $paddingsection:1rem;
